tests/assert2.dora
// error: 1

fn main() {
  let a = false;
  assert(a);
}
